[package]
name = "arena_map_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
pico-args = "0.5.0"
byte = "0.2.6"
modular-bitfield = "0.11.2"
glam = "0.22.0"
itertools = "0.10.5"
bevy = "0.9.1"
bevy_egui = "0.19.0"